adjusted fixed backgrounds and made some changes to common for grid spacing with c9-grid

--- a/src/blocks/block-column-container/styles/style.scss
+++ b/src/blocks/block-column-container/styles/style.scss
@@ -339,3 +339,13 @@
 		border-radius: 5px;
 	}
 }
+
+@media only screen and (max-width: 667px) {
+	.c9-is-responsive-column .c9-column {
+		padding-bottom: 30px;
+	}
+
+	.c9-is-responsive-column .c9-column:last-child {
+		padding-bottom: 0px;
+	}
+}
