--- a/src/blocks/block-post-container/styles/editor.scss
+++ b/src/blocks/block-post-container/styles/editor.scss
@@ -249,9 +249,14 @@
 	.container-narrow.block-editor-block-list__block>.block-editor-block-list__block-edit,
 	.container.block-editor-block-list__block>.block-editor-block-list__block-edit,
 	.container.block-editor-block-list__block[data-align="wide"]>.block-editor-block-list__block-edit,
-	.container-fluid.block-editor-block-list__block .block-editor-block-list__block-edit {
+	.container-fluid.block-editor-block-list__block>.block-editor-block-list__block-edit {
 		margin-left: auto;
 		margin-right: auto;
+	}
+
+	.container-fluid.block-editor-block-list__block>.block-editor-block-list__block-edit .block-editor-block-list__block .block-editor-block-list__block-edit {
+		margin-left: -28px;
+		margin-right: -28px
 	}
 
 	/* for unsetting default paddings from gutenberg*/
